--- a/index.html
+++ b/index.html
@@ -621,6 +621,87 @@
               </div>
             </div>
           </div>
+
+          <div class="section6-conditions-adaptive">
+            <div class="section6-conditions-item">
+              <div class="icon-box">
+                <img
+                  class="section6-conditions-item__img"
+                  src="./assets/img/01.svg"
+                  alt=""
+                />
+                <img
+                  class="section6-conditions-item__icon"
+                  src="./assets/img/01-icon.svg"
+                  alt=""
+                />
+              </div>
+              <p class="section6-conditions-item__title">Заявка</p>
+              <p class="section6-conditions-item__desc">
+                Вы оставляете заявку <br />
+                у нас на сайте
+              </p>
+            </div>
+
+            <div class="section6-conditions-item">
+              <div class="icon-box">
+                <img
+                  class="section6-conditions-item__img"
+                  src="./assets/img/02.svg"
+                  alt=""
+                />
+                <img
+                  class="section6-conditions-item__icon"
+                  src="./assets/img/01-icon.svg"
+                  alt=""
+                />
+              </div>
+              <p class="section6-conditions-item__title">Консультация</p>
+              <p class="section6-conditions-item__desc">
+                Консультируем вас по всем <br />
+                важным вопросам
+              </p>
+            </div>
+
+            <div class="section6-conditions-item">
+              <div class="icon-box">
+                <img
+                  class="section6-conditions-item__img"
+                  src="./assets/img/03.svg"
+                  alt=""
+                />
+                <img
+                  class="section6-conditions-item__icon"
+                  src="./assets/img/01-icon.svg"
+                  alt=""
+                />
+              </div>
+              <p class="section6-conditions-item__title">Договор</p>
+              <p class="section6-conditions-item__desc">
+                Подписываем двухсторонний <br />
+                договор
+              </p>
+            </div>
+
+            <div class="section6-conditions-item">
+              <div class="icon-box">
+                <img
+                  class="section6-conditions-item__img"
+                  src="./assets/img/04.svg"
+                  alt=""
+                />
+                <img
+                  class="section6-conditions-item__icon"
+                  src="./assets/img/01-icon.svg"
+                  alt=""
+                />
+              </div>
+              <p class="section6-conditions-item__title">Обучение</p>
+              <p class="section6-conditions-item__desc">
+                Обучаем и выдаем все <br />сертификаты
+              </p>
+            </div>
+          </div>
         </div>
       </section>
 
